@@ -1,9 +1,6 @@
 package pl.bony.gnomix.controllers;
 
 import static org.hamcrest.Matchers.containsString;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -23,7 +20,6 @@ import pl.bony.gnomix.domain.guest.GuestService;
 
 import java.time.LocalDate;
 import java.util.Arrays;
-import java.util.List;
 
 @WebMvcTest(GuestController.class)
 public class GuestControllerTest {
@@ -37,35 +33,40 @@ public class GuestControllerTest {
     @Test
     public void basic() throws Exception {
 
-        Guest guest = new Guest("Jan", "Kowalski", LocalDate.of(1991, 1, 1), Gender.MALE);
+        Guest guest = new Guest("Paweł", "Cwik", LocalDate.of(1986, 11, 13), Gender.MALE, false);
 
-        given(guestService.findAll()).willReturn(List.of(guest));
+        Mockito.when(guestService.findAll()).thenReturn(Arrays.asList(guest));
 
         mockMvc.perform(get("/guests"))
                 .andExpect(status().isOk())
                 .andExpect(model().attributeExists("guests"))
                 .andExpect(view().name("guests"))
-                .andExpect(content().string(containsString("1991-01-01")));
+                .andExpect(content().string(containsString("1986-11-13")));
     }
 
     @Test
     public void handlePost() throws Exception {
-        String postContent = "firstName=Ala&lastName=Makota&dateOfBirth=1991-01-01&gender=FEMALE";
-        MockHttpServletRequestBuilder request = post("/guests")
-                .contentType(MediaType.APPLICATION_FORM_URLENCODED_VALUE)
-                .content(postContent);
+
+        String postContent = "firstName=Pawel&lastName=Cwik&dateOfBirth=2021-09-15&gender=FEMALE";
+
+        MockHttpServletRequestBuilder request =
+                post("/guests")
+                        .contentType(MediaType.APPLICATION_FORM_URLENCODED_VALUE)
+                        .content(postContent);
 
         mockMvc.perform(request)
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/guests"));
 
         GuestCreationDTO dto = new GuestCreationDTO(
-                "Ala",
-                "Makota",
-                LocalDate.parse("1991-01-01"),
-                Gender.valueOf("FEMALE"));
+                "Pawel",
+                "Cwik",
+                LocalDate.parse("2021-09-15"),
+                Gender.FEMALE,
+                "on"
+        );
 
-        verify(guestService, Mockito.times(1)).createNewGuest(dto);
+        Mockito.verify(guestService, Mockito.times(1)).createNewGuest(dto);
     }
 
     @Test
@@ -78,26 +79,23 @@ public class GuestControllerTest {
                 .andExpect(status().is3xxRedirection())
                 .andExpect(redirectedUrl("/guests"));
 
-        verify(guestService, Mockito.times(1)).removeById(21);
-
+        Mockito.verify(guestService, Mockito.times(1)).removeById(21);
     }
 
     @Test
     public void handleShowEditForm() throws Exception {
-
         MockHttpServletRequestBuilder request =
                 get("/guests/edit/21");
 
-        Guest guest = new Guest("Jan", "Kowalski", LocalDate.of(1991, 1, 1), Gender.MALE);
+        Guest guest = new Guest("Paweł", "Cwik", LocalDate.of(1986, 11, 13), Gender.MALE, false);
 
-        given(guestService.getById(21)).willReturn(guest);
+        Mockito.when(guestService.getById(21)).thenReturn(guest);
 
         mockMvc.perform(request)
                 .andExpect(status().isOk())
                 .andExpect(model().attributeExists("guest"))
                 .andExpect(view().name("editGuest"));
 
-        verify(guestService, Mockito.times(1)).getById(21);
-
+        Mockito.verify(guestService, Mockito.times(1)).getById(21);
     }
 }
